--- a/views/index.html
+++ b/views/index.html
@@ -1,110 +1,130 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
     <!-- Meta Description -->
     <meta
-        name="description"
-        content="I write about programming, thing's I've learned whilst programming, and hopefully, some useful code snippets."
+      name="description"
+      content="I write about programming, thing's I've learned whilst programming, and hopefully, some useful code snippets."
     />
 
     <!-- Keywords -->
     <meta
-        name="keywords"
-        content="Brian Douglas, JavaScript, PHP, Java, SQL, C, web development, programming, laravel"
+      name="keywords"
+      content="Brian Douglas, JavaScript, PHP, Java, SQL, C, web development, programming, laravel"
     />
 
     <!-- Author -->
-    <meta name="author" content="Brian Douglas"/>
+    <meta name="author" content="Brian Douglas" />
 
     <!-- Open Graph / Facebook -->
-    <meta property="og:type" content="website"/>
+    <meta property="og:type" content="website" />
     <meta
-        property="og:title"
-        content="BrianDouglas.ie - Mediocre Programmer."
+      property="og:title"
+      content="BrianDouglas.ie - Mediocre Programmer."
     />
     <meta
-        property="og:description"
-        content="I write about programming, thing's I've learned whilst programming, and also some useful code snippets."
+      property="og:description"
+      content="I write about programming, thing's I've learned whilst programming, and also some useful code snippets."
     />
-    <meta property="og:url" content="https://www.briandouglas.ie"/>
+    <meta property="og:url" content="https://www.briandouglas.ie" />
     <meta
-        property="og:image"
-        content="http://www.briandouglas.ie/images/open-graph-index.png"
+      property="og:image"
+      content="http://www.briandouglas.ie/images/open-graph-index.png"
     />
-    <meta property="og:site_name" content="BrianDouglas.ie"/>
+    <meta property="og:site_name" content="BrianDouglas.ie" />
 
     <!-- Twitter Meta -->
-    <meta name="twitter:card" content="summary_large_image"/>
+    <meta name="twitter:card" content="summary_large_image" />
     <meta
-        name="twitter:title"
-        content="BrianDouglas.ie - Mediocre Programmer."
+      name="twitter:title"
+      content="BrianDouglas.ie - Mediocre Programmer."
     />
     <meta
-        name="twitter:description"
-        content="I write about programming, thing's I've learned whilst programming, and also some useful code snippets."
+      name="twitter:description"
+      content="I write about programming, thing's I've learned whilst programming, and also some useful code snippets."
     />
     <meta
-        name="twitter:image"
-        content="http://www.briandouglas.ie/images/open-graph-index.png"
+      name="twitter:image"
+      content="http://www.briandouglas.ie/images/open-graph-index.png"
     />
-    <meta name="twitter:site" content="@BrianDouglasIE"/>
+    <meta name="twitter:site" content="@BrianDouglasIE" />
 
     <!-- Canonical URL -->
-    <link rel="canonical" href="https://www.briandouglas.ie"/>
+    <link rel="canonical" href="https://www.briandouglas.ie" />
 
     <!-- Favicon (Optional) -->
     <link
-        rel="icon"
-        href="https://www.briandouglas.ie/favicon.ico"
-        type="image/x-icon"
+      rel="icon"
+      href="https://www.briandouglas.ie/favicon.ico"
+      type="image/x-icon"
     />
 
     <!-- Robots -->
-    <meta name="robots" content="index, follow"/>
+    <meta name="robots" content="index, follow" />
 
     <!-- Favicon-->
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png"/>
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png"/>
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png"/>
-    <link rel="manifest" href="/site.webmanifest"/>
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="manifest" href="/site.webmanifest" />
 
-    <title>{{#title}}{{title}} - briandouglas.ie{{/title}}{{^title}}briandouglas.ie{{/title}}</title>
-    <link rel="stylesheet" href="/styles.css">
-</head>
-<body>
+    <title>
+      {{#title}}{{title}} -
+      briandouglas.ie{{/title}}{{^title}}briandouglas.ie{{/title}}
+    </title>
+    <link rel="stylesheet" href="/styles.css" />
+  </head>
+  <body>
+    <div class="content">
+      {{> site-header}}
 
-<div class="content">
-    {{> site-header}}
-
-    <section class="about">
-        <img src="/images/me.png" alt="A photo of Brian Douglas">
+      <section class="about">
+        <img src="/images/me.png" alt="A photo of Brian Douglas" />
         <div>
-            <p>
-                I like to program as close to vanilla as possible. Because abstractions are complex.
-                Seriously, why give a man a fish when you could teach him about asynchronous programming?
-            </p>
-            <p>
-                I've been paid to program for {{yearsOfExperience}} years.
-                People have paid me to write SQL, Java, Python, PHP, C, and JavaScript.
-                Which is ridiculous as it's just my hobby. I love to code.
-            </p>
+          <p>
+            I like to program as close to vanilla as possible. Because
+            abstractions are complex. Seriously, why give a man a fish when you
+            could teach him about asynchronous programming?
+          </p>
+          <p>
+            I've been paid to program since 2014. People have paid me to write
+            C++, C, Java, PHP, SQL, and JavaScript. Which is ridiculous as it's
+            just my hobby. I love to code.
+          </p>
         </div>
-    </section>
+      </section>
 
-    <main>
-        <h2>Latest Posts</h2>
-        {{> post-excerpt-list posts=latestPosts}}
+      <main>
+        <h2>Recent Posts</h2>
+        <ul>
+          {{#newer_posts}}
+          <li>
+            <article>
+              <h3>{{ title }}</h3>
+              <time datetime="{{date}}">{{date}}</time>
+              <div>{{{ excerpt}}}</div>
+              <a href="{{slug}}">Read more</a>
+            </article>
+          </li>
+          {{/newer_posts}}
+        </ul>
 
-        <h2>Older Posts <i>({{olderCount}})</i></h2>
-        {{> post-title-list posts=olderPosts}}
-    </main>
+        <h2>Older Posts</h2>
+        <ul>
+          {{#older_posts}}
+          <li>
+            <time datetime="{{date}}">{{date}}</time>
+            <a href="{{slug}}">{{title}}</a>
+          </li>
+          {{/older_posts}}
+        </ul>
+      </main>
 
-    {{> site-footer}}
-</div>
-
-</body>
+      {{> site-footer}}
+    </div>
+  </body>
 </html>
