--- a/views/partials/site-header.html
+++ b/views/partials/site-header.html
@@ -1,7 +1,7 @@
 <header class="site-header">
     <a href="/" class="home">Brian Douglas</a>
 
-    <a href="https://github.com/BrianDouglasIE" class="github">
+    <a href="https://github.com/BrianDouglasIE" class="github" aria-label="link to my github page">
         <svg
                 height="32"
                 aria-hidden="true"
