--- a/views/post.html
+++ b/views/post.html
@@ -65,7 +65,7 @@
                 <time datetime="{{date}}">{{date}}</time>
             </header>
 
-            <div class="body">
+            <div class="article-body">
                 {{{content}}}
             </div>
 
