--- a/docs/styles.css
+++ b/docs/styles.css
@@ -308,6 +308,15 @@ main ul li article a:focus {
   color: #fff;
 }
 
+li > a, li > a:hover {
+  color: inherit;
+  text-decoration: none;
+}
+
+li > a:hover h3 {
+  text-decoration: underline;
+}
+
 /* ===== Post Search ===== */
 
 .search-container {
