feat: add year by year count

--- a/docs/styles.css
+++ b/docs/styles.css
@@ -243,6 +243,10 @@ time {
 @media screen and (max-width: 40rem) {
     .about {
         flex-wrap: wrap;
+
+		img {
+			max-width: 100%;
+		}
     }
 
     .post-title-list {
