--- a/views/index.html
+++ b/views/index.html
@@ -1,140 +1,161 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
-    <!-- Meta Description -->
-    <meta
+        <!-- Meta Description -->
+        <meta
             name="description"
             content="I write about programming, thing's I've learned whilst programming, and hopefully, some useful code snippets."
-    />
+        />
 
-    <!-- Keywords -->
-    <meta
+        <!-- Keywords -->
+        <meta
             name="keywords"
             content="Brian Douglas, JavaScript, PHP, Java, SQL, C, web development, programming, laravel"
-    />
+        />
 
-    <!-- Author -->
-    <meta name="author" content="Brian Douglas"/>
+        <!-- Author -->
+        <meta name="author" content="Brian Douglas" />
 
-    <!-- Open Graph / Facebook -->
-    <meta property="og:type" content="website"/>
-    <meta
-            property="og:title"
-            content="BrianDouglas.ie - Mediocre Programmer."
-    />
-    <meta
+        <!-- Open Graph / Facebook -->
+        <meta property="og:type" content="website" />
+        <meta property="og:title" content="BrianDouglas.ie - Programmer" />
+        <meta
             property="og:description"
             content="I write about programming, thing's I've learned whilst programming, and also some useful code snippets."
-    />
-    <meta property="og:url" content="https://www.briandouglas.ie"/>
-    <meta
+        />
+        <meta property="og:url" content="https://www.briandouglas.ie" />
+        <meta
             property="og:image"
             content="http://www.briandouglas.ie/images/open-graph-index.png"
-    />
-    <meta property="og:site_name" content="BrianDouglas.ie"/>
+        />
+        <meta property="og:site_name" content="BrianDouglas.ie" />
 
-    <!-- Twitter Meta -->
-    <meta name="twitter:card" content="summary_large_image"/>
-    <meta
-            name="twitter:title"
-            content="BrianDouglas.ie - Mediocre Programmer."
-    />
-    <meta
+        <!-- Twitter Meta -->
+        <meta name="twitter:card" content="summary_large_image" />
+        <meta name="twitter:title" content="BrianDouglas.ie - Programmer" />
+        <meta
             name="twitter:description"
             content="I write about programming, thing's I've learned whilst programming, and also some useful code snippets."
-    />
-    <meta
+        />
+        <meta
             name="twitter:image"
             content="http://www.briandouglas.ie/images/open-graph-index.png"
-    />
-    <meta name="twitter:site" content="@BrianDouglasIE"/>
+        />
+        <meta name="twitter:site" content="@BrianDouglasIE" />
 
-    <!-- Canonical URL -->
-    <link rel="canonical" href="https://www.briandouglas.ie"/>
+        <!-- Canonical URL -->
+        <link rel="canonical" href="https://www.briandouglas.ie" />
 
-    <!-- Favicon (Optional) -->
-    <link
+        <!-- Favicon (Optional) -->
+        <link
             rel="icon"
             href="https://www.briandouglas.ie/favicon.ico"
             type="image/x-icon"
-    />
+        />
 
-    <!-- Robots -->
-    <meta name="robots" content="index, follow"/>
+        <!-- Robots -->
+        <meta name="robots" content="index, follow" />
 
-    <!-- Favicon-->
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png"/>
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png"/>
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png"/>
-    <link rel="manifest" href="/site.webmanifest"/>
+        <!-- Favicon-->
+        <link
+            rel="apple-touch-icon"
+            sizes="180x180"
+            href="/apple-touch-icon.png"
+        />
+        <link
+            rel="icon"
+            type="image/png"
+            sizes="32x32"
+            href="/favicon-32x32.png"
+        />
+        <link
+            rel="icon"
+            type="image/png"
+            sizes="16x16"
+            href="/favicon-16x16.png"
+        />
+        <link rel="manifest" href="/site.webmanifest" />
 
-    <title>${ data.title ? `${data.title} - briandouglas.ie` : "briandouglas.ie" }</title>
-    <link rel="stylesheet" href="/styles.css">
-</head>
-<body>
+        <title>
+            ${ data.title ? `${data.title} - briandouglas.ie` :
+            "briandouglas.ie" }
+        </title>
+        <link rel="stylesheet" href="/styles.css" />
+    </head>
+    <body>
+        <div class="content">
+            ${helpers.include('site-header')}
 
-<div class="content">
-    ${helpers.include('site-header')}
+            <section class="about">
+                <img src="/images/me.png" alt="A photo of Brian Douglas" />
+                <div>
+                    <p>
+                        I am a programmer from Donegal, Ireland. I enjoy making
+                        things on the web and writing about my findings. My hope
+                        is that you will find something here that piques your
+                        interest and that you will drop me an email to say
+                        <i>hi</i>.
+                    </p>
+                    <p>
+                        I've been programming for ${new Date().getFullYear() -
+                        2012} years and I am grateful for the life it has
+                        afforded me. I do not take it forgranted.
+                    </p>
+                </div>
+            </section>
 
-    <section class="about">
-        <img src="/images/me.png" alt="A photo of Brian Douglas">
-        <div>
-            <p>
-                I like to program as close to vanilla as possible. Because abstractions are complex.
-                Seriously, why give a man a fish when you could teach him about asynchronous programming?
-            </p>
-            <p>
-                I've been paid to program for ${new Date().getFullYear() - 2012} years.
-                People have paid me to write SQL, Java, Python, PHP, C, and C++.
-                Which is ridiculous as it's my hobby. I love to code.
-            </p>
+            <main>
+                <h2>Latest Posts</h2>
+                <ul class="post-excerpt-list">
+                    ${data.posts.slice(0, 3).map(post => `
+                    <li>
+                        <article>
+                            <header>
+                                <a href="${post.slug}"
+                                    ><h3>${post.data.title}</h3></a
+                                >
+                                <time datetime="${post.data.date}"
+                                    >${helpers.formatDate(post.data.date)}</time
+                                >
+                            </header>
+
+                            <div>${post.excerptHtml}</div>
+
+                            <footer>
+                                <a href="${post.slug}">Read more</a>
+                            </footer>
+                        </article>
+                    </li>
+                    `).join('')}
+                </ul>
+
+                <h2>All Posts <i>(${data.posts.length})</i></h2>
+                <ul class="post-title-list">
+                    ${Object.entries(helpers.groupPostsByYear(data.posts))
+                    .filter(([year, posts]) => posts.length) .toReversed()
+                    .map(([year, posts]) => `
+                    <li>
+                        <h3>
+                            ${year} -
+                            <i><small>${posts.length} posts</small></i>
+                        </h3>
+                    </li>
+                    ${posts.map(post => `
+                    <li>
+                        <time datetime="${post.data.date}"
+                            >${post.data.date.replace(`/${year}`, '')}</time
+                        >
+                        <a href="${post.slug}">${post.data.title}</a>
+                    </li>
+                    `).join('')} `).join('')}
+                </ul>
+            </main>
+
+            ${helpers.include('site-footer')}
         </div>
-    </section>
-
-    <main>
-        <h2>Latest Posts</h2>
-		<ul class="post-excerpt-list">
-			${data.posts.slice(0, 3).map(post => `
-			<li>
-				<article>
-					<header>
-						<a href="${post.slug}"><h3>${post.data.title}</h3></a>
-						<time datetime="${post.data.date}">${helpers.formatDate(post.data.date)}</time>
-					</header>
-
-					<div>${post.excerptHtml}</div>
-
-					<footer>
-						<a href="${post.slug}">Read more</a>
-					</footer>
-				</article>
-			</li>
-			`).join('')}
-		</ul>
-
-        <h2>All Posts <i>(${data.posts.length})</i></h2>
-		<ul class="post-title-list">
-			${Object.entries(helpers.groupPostsByYear(data.posts))
-			.filter(([year, posts]) => posts.length)
-			.toReversed()
-			.map(([year, posts]) => `
-			<li><h3>${year} - <i><small>${posts.length} posts</small></i></h3></li>
-			${posts.map(post => `
-			<li>
-				<time datetime="${post.data.date}">${post.data.date.replace(`/${year}`, '')}</time>
-				<a href="${post.slug}">${post.data.title}</a>
-			</li>
-			`).join('')}
-			`).join('')}
-		</ul>
-    </main>
-
-    ${helpers.include('site-footer')}
-</div>
-
-</body>
+    </body>
 </html>
